@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190203"
-#define public MagickPackageReleaseDate "snapshot-20190203"
+#define public MagickPackageVersionAddendum ".020190208"
+#define public MagickPackageReleaseDate "snapshot-20190208"
